api refactor and some logic fixes
